fixes to project jump menu

--- a/stylesheets/global/#modals.sass
+++ b/stylesheets/global/#modals.sass
@@ -74,7 +74,7 @@ div
 	&:empty
 		border: none
 #project-jump.drdn
-	width: 200px
+	width: 130px
 	display: inline-block
 
 #project-jump
@@ -85,6 +85,9 @@ div
 		border: 1px solid #ccc
 		margin: 0 !important
 		vertical-align: middle
+		font-size: 9px
+		padding: 2px
+		color: black
 	.drdn-content
 		width: 280px
 
